--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+	<html lang="en">
+	<head>
+		<meta charset = "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Assignment Solution for Module 2</title>
+		<link rel=stylesheet href = "index.css">
+	</head>
+	<body>
+		<h1>Our Menu</h1>
+
+		<div class="row">
+		
+		<section class="col-md-4 col-sm-6 col-xs-12">
+			<h2 id ="chicken">
+				Chicken
+		</h2>
+			<p>
+				Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.
+		</p>
+	</section>
+
+		<section class="col-md-4 col-sm-6 col-xs-12">
+			<h2 id = "beef">
+				Beef
+		</h2>
+			<p>
+				Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients. Beef skeletal muscle meat can be used as is by merely cutting into certain parts roasts, short ribs, steak or used in sausages.
+		</p>
+	</section>
+
+		<section class="col-md-4 col-sm-6 col-xs-12">
+			<h2 id = "sushi"> 
+				Sushi
+		</h2>
+			<p>
+				Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients such as seafood, vegetables, and occasionally tropical fruits. Sushi is traditionally made with medium-grain white rice, though it can be prepared with rice, meat and seafood. 
+		</p>
+	</section>
+	</div>
+	</body>
+	</html>
