--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset = "utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Solution for Module 2</title>
-    <link rel=stylesheet href = "assignment1.css">
+    <link rel=stylesheet href = "index.css">
   </head>
   <body>
     <h1>Our Menu</h1>
@@ -29,7 +29,7 @@
   </section>
 </div>
 
-    <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="col-md-4 col-sm-12 col-xs-12">
       <section class="sushi">
       <h2> Sushi </h2>
       <p>
