--- a/module3/assignment2.html
+++ b/module3/assignment2.html
@@ -9,35 +9,34 @@
   </head>
   <body>
     <header>
-      <nav id="header-nav" class="navbar-navbar-default">
-        <div class="container">
-          <div class="navbar-header">
-            <div class="navbar-brand">
-              <a href="assignment2.html"> <h1>William Shakespeare</h1> </a>
-            </div>
-
-            <button class="navbar-toggler d-block d-md-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="my_menu container-fluid visible-xs">
-          <div class="collapse navbar-collapse collapse show" id="navbarNav">
-            <ul id="nav-list" class="navbar-nav nav">
-              <li class="nav-item">
-                <a href="#A">Julius Caesar</a>
-              </li>
-              <li class="nav-item">
-                <a href="#B">Macbeth</a>
-              </li>
-              <li class="nav-item">
-                <a href="#C">The Merchant of Venice</a>
-              </li>
-            </ul>
-          </div>
-        </div>           
-
+      <nav id="header-nav" class="navbar navbar-default row">
+      <div class="text-left navbar-brand"><a href="assignment2.html"> <h1>William Shakespeare</h1> </a> </div>
+      <div class="container navbar-text text-center menu-nadpis ">
+        <div class="navbar-header">        
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
         </div>
-      </nav>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse collapse show visible-xs">
+           <ul id="nav-list" class="nav navbar-nav navbar-left">
+            <li class="visible-xs text-center">
+                <br class="visible-xs"><a href="#A">Julius Caesar</a>
+            </li>
+            <li class="visible-xs">
+                <br class="visible-xs"> <a href="#B">Macbeth</a>
+            </li>
+            <li class="visible-xs">
+                <br class="visible-xs"> <a href="#C">The Merchant of Venice</a>
+            </li>
+          </ul> <!-- #nav-list -->
+        </div> <!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav>
+      
     </header>
     <h2 class="text-center">Best Dramas</h2>
 
@@ -60,7 +59,7 @@
 
 		Brutus and Cassius gather an army in Northern Greece and prepare to fight the forces led by Mark Antony, who has joined with Caesar’s great-nephew, Octavius, and with Lepidus. Away from Rome, Brutus and Cassius are filled with doubts about the future and they quarrel bitterly over funds for their soldiers’ pay. They make up the argument and despite the misgivings of Cassius over the site they prepare to engage Antony’s army at Philippi. Brutus stoically receives news of his wife’s suicide in Rome, but he sees Caesar’s ghost as he rests, unable to sleep on the eve of the conflict.<br>
  
-		In the battle the Republicans at first appear to be winning but when his messenger’s horse seems to be overtaken by the enemy Cassius fears the worst and gets his servant, Pindarus, to help him to a quick death. Brutus, finding Cassius’s body, commits suicide as the only honourable action left to him. Antony, triumphant on the battlefield, praises Brutus as ‘the noblest Roman of them all’, and orders a formal funeral before he and Octavius return to rule in Rome. <div> <a href = "#A"> (End of Julius Caesar) </a> </div>
+		In the battle the Republicans at first appear to be winning but when his messenger’s horse seems to be overtaken by the enemy Cassius fears the worst and gets his servant, Pindarus, to help him to a quick death. Brutus, finding Cassius’s body, commits suicide as the only honourable action left to him. Antony, triumphant on the battlefield, praises Brutus as ‘the noblest Roman of them all’, and orders a formal funeral before he and Octavius return to rule in Rome. <div> <a href = "#assignment2.html"> (End of Julius Caesar) </a> </div>
     </p>
   </section>
 </div>
@@ -79,7 +78,7 @@
 
 		Macbeth is an anomaly among Shakespeare's tragedies in certain critical ways. It is short: more than a thousand lines shorter than Othello and King Lear, and only slightly more than half as long as Hamlet. This brevity has suggested to many critics that the received version is based on a heavily cut source, perhaps a prompt-book for a particular performance. This would reflect other Shakespearean plays existing in both Quarto and the Folio, where the Quarto versions are usually longer than Folio versions. <br>
 
-		Macbeth was first printed in the First Folio, but has no Quarto version – if there were a Quarto, it would probably be longer than the Folio version. That brevity has also been connected to the other unusual features: the fast pace of the first act, which has seemed to be the "stripped for action"; the comparative flatness of the characters other than Macbeth; and the oddness of Macbeth himself compared with the other Shakespearean tragic and courageous heroes. Macbeth is also considered to be an inauspicious play because it is said that no enactment of the play ever has been completed as some sort of misshappening has always occurred during its enacting. <div> <a href = "#B"> (End of Macbeth) </a> </div> 
+		Macbeth was first printed in the First Folio, but has no Quarto version – if there were a Quarto, it would probably be longer than the Folio version. That brevity has also been connected to the other unusual features: the fast pace of the first act, which has seemed to be the "stripped for action"; the comparative flatness of the characters other than Macbeth; and the oddness of Macbeth himself compared with the other Shakespearean tragic and courageous heroes. Macbeth is also considered to be an inauspicious play because it is said that no enactment of the play ever has been completed as some sort of misshappening has always occurred during its enacting. <div> <a href = "assignment2.html"> (End of Macbeth) </a> </div> 
     </p>
   </section>
 </div>
@@ -98,12 +97,13 @@
 
 		Portia arrives in her disguise to defend Antonio. Given the authority of judgment by the Duke, Portia decides that Shylock can have a pound of flesh as long as he doesn’t draw blood, as it is against the law to shed a Christian’s blood. Since it is obvious that to draw a pound of flesh would kill Antonio, Shylock is denied his suit. Moreover, for conspiring to murder a Venetian citizen, Portia orders that he should forfeit all his wealth. Half will go to Venice, and half to Antonio.<br>
 
-		Antonio gives his half back to Shylock on the condition that Shylock bequeath it to his disinherited daughter, Jessica. Shylock must also convert to Christianity. A broken Shylock accepts. News arrives that Antonio’s remaining ships have returned safely. With the exception of Shylock, all celebrate a happy ending to the affair. <div> <a href = "#C"> (End of The Merchant of Venice) </a> </div>
+		Antonio gives his half back to Shylock on the condition that Shylock bequeath it to his disinherited daughter, Jessica. Shylock must also convert to Christianity. A broken Shylock accepts. News arrives that Antonio’s remaining ships have returned safely. With the exception of Shylock, all celebrate a happy ending to the affair. <div> <a href = "assignment2.html"> (End of The Merchant of Venice) </a> </div>
     </p>
   </section>
   </div>
   </div>
-  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <!--<script src="js/jquery-3.3.1.js"></script> -->
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
   </body>
