--- a/module3/assignment2.html
+++ b/module3/assignment2.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Solution for Module 3</title>
     <link rel=stylesheet href = "bootstrap1.css">
+    <script src="bootstrap.min.js"></script>
+  <script src="jquery-2.1.4.min.js"></script>
+  <script src="npm.js"></script> 
+  <script src="script.js"></script>
 	<link rel=stylesheet href = "assignment2.css">
   </head>
   <body>
     <header>
       <nav id="header-nav" class="navbar navbar-default row">
-      <div class="text-left navbar-brand"><a href="assignment2.html"> <h1>William Shakespeare</h1> </a> </div>
+      <div class=" navbar-brand text-left"> <a href="assignment2.html"> <h1>William Shakespeare</h1> </a> </div>
       <div class="container navbar-text text-center menu-nadpis ">
         <div class="navbar-header">        
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
@@ -21,15 +25,15 @@
           </button>
         </div>
 
-        <div id="collapsable-nav" class="collapse navbar-collapse collapse show visible-xs">
+        <div id="collapsable-nav" class="collapse navbar-collapse hidden-md hidden-lg visible-xs">
            <ul id="nav-list" class="nav navbar-nav navbar-left">
-            <li class="visible-xs text-center">
+            <li class="text-center visible-xs">
                 <br class="visible-xs"><a href="#A">Julius Caesar</a>
             </li>
-            <li class="visible-xs">
+            <li class="text-center visible-xs">
                 <br class="visible-xs"> <a href="#B">Macbeth</a>
             </li>
-            <li class="visible-xs">
+            <li class="text-center visible-xs">
                 <br class="visible-xs"> <a href="#C">The Merchant of Venice</a>
             </li>
           </ul> <!-- #nav-list -->
@@ -102,9 +106,5 @@
   </section>
   </div>
   </div>
-  <script src="js/jquery-1.11.3.min.js"></script>
-  <!--<script src="js/jquery-3.3.1.js"></script> -->
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
   </body>
   </html>
