--- a/module3/assignment2.html
+++ b/module3/assignment2.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Solution for Module 3</title>
     <link rel=stylesheet href = "bootstrap1.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"> </script> 
     <script src="bootstrap.min.js"></script>
-  <script src="jquery-2.1.4.min.js"></script>
-  <script src="npm.js"></script> 
+ <script src="npm.js"></script> 
   <script src="script.js"></script>
 	<link rel=stylesheet href = "assignment2.css">
   </head>
@@ -25,7 +25,7 @@
           </button>
         </div>
 
-        <div id="collapsable-nav" class="collapse navbar-collapse hidden-md hidden-lg visible-xs">
+        <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-left">
             <li class="text-center visible-xs">
                 <br class="visible-xs"><a href="#A">Julius Caesar</a>
